--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "luchosweb",
   "version": "0.1.0",
+  "homepage": "https://francisco-07.github.io/CMR",
   "private": true,
   "dependencies": {
     "@sanity/client": "^3.3.3",
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
