--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "luchosweb",
   "version": "0.1.0",
-  "homepage": "https://francisco-07.github.io/CMR",
+  "homepage": "https://cmr.com",
   "private": true,
   "dependencies": {
     "@sanity/client": "^3.3.3",
